--- a/Progress_Report_FeedingAmerica.ipynb
+++ b/Progress_Report_FeedingAmerica.ipynb
@@ -1,6 +1,28 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "b6a21283",
+   "metadata": {},
+   "source": [
+    "# Introduction: Milk allocation in grand-WI region for Feeding America"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "74d93276",
+   "metadata": {},
+   "source": [
+    "Food insecurity remains a widespread challenge across the United States, with millions of individuals relying on food banks for essential nutrition. This project, *Delivering Food to Communities in the US*, aims to formulate an optimization model to improve the efficiency and equity of food distribution. Our primary objective is to minimize transportation costs while ensuring that food reaches regions with the greatest need.\n",
+    "\n",
+    "We abstract the real-world context into a **network flow model**, where each **state is simplified as a node**, and food logistics are represented as flows along arcs between them. The current formulation focuses on **Wisconsin (WI)** as the primary source, with potential redistribution through **Illinois (IL)**, and demand nodes located in neighboring states including **Michigan (MI), Minnesota (MN), and Iowa (IA)**. Due to current limitations in accessing detailed datasets, we approximate demand values using summary statistics from [Feeding America’s 2023 report](https://map.feedingamerica.org/county/2023/overall), and supplement our model with publicly available information on transportation costs, supply chain parameters, and general nutritional guidelines. These sources inform the construction of model variables, constraints, and objective functions.\n",
+    "\n",
+    "Our initial framework uses **Linear Programming (LP)** to solve a **minimum-cost flow problem** under supply, demand, and capacity constraints. Depending on time and feasibility, we may later extend the model to include **Mixed-Integer Programming (MIP)** features, such as routing restrictions or discrete truck assignments.\n",
+    "\n",
+    "This progress report outlines the model design and assumptions, summarizes work completed to date, and lays out the next steps, including potential extensions such as subgroup prioritization and sensitivity analyses.\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "cff4b921",
@@ -21,12 +43,12 @@
    "id": "6f12939f",
    "metadata": {},
    "source": [
-    "# Model construction"
+    "# Theoretic model construction"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "451d98d3",
    "metadata": {},
    "outputs": [
@@ -126,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "ad14d012",
    "metadata": {},
    "outputs": [
@@ -137,23 +159,23 @@
        "<?xml version=\"1.0\" encoding=\"utf-8\"?>\n",
        "<svg xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\" width=\"600\" height=\"400\" viewBox=\"0 0 2400 1600\">\n",
        "<defs>\n",
-       "  <clipPath id=\"clip840\">\n",
+       "  <clipPath id=\"clip960\">\n",
        "    <rect x=\"0\" y=\"0\" width=\"2400\" height=\"1600\"/>\n",
        "  </clipPath>\n",
        "</defs>\n",
-       "<path clip-path=\"url(#clip840)\" d=\"M0 1600 L2400 1600 L2400 8.88178e-14 L0 8.88178e-14  Z\" fill=\"#ffffff\" fill-rule=\"evenodd\" fill-opacity=\"1\"/>\n",
+       "<path clip-path=\"url(#clip960)\" d=\"M0 1600 L2400 1600 L2400 8.88178e-14 L0 8.88178e-14  Z\" fill=\"#ffffff\" fill-rule=\"evenodd\" fill-opacity=\"1\"/>\n",
        "<defs>\n",
-       "  <clipPath id=\"clip841\">\n",
+       "  <clipPath id=\"clip961\">\n",
        "    <rect x=\"480\" y=\"0\" width=\"1681\" height=\"1600\"/>\n",
        "  </clipPath>\n",
        "</defs>\n",
-       "<path clip-path=\"url(#clip840)\" d=\"M47.2441 1552.76 L2352.76 1552.76 L2352.76 47.2441 L47.2441 47.2441  Z\" fill=\"#ffffff\" fill-rule=\"evenodd\" fill-opacity=\"1\"/>\n",
+       "<path clip-path=\"url(#clip960)\" d=\"M47.2441 1552.76 L2352.76 1552.76 L2352.76 47.2441 L47.2441 47.2441  Z\" fill=\"#ffffff\" fill-rule=\"evenodd\" fill-opacity=\"1\"/>\n",
        "<defs>\n",
-       "  <clipPath id=\"clip842\">\n",
+       "  <clipPath id=\"clip962\">\n",
        "    <rect x=\"47\" y=\"47\" width=\"2307\" height=\"1507\"/>\n",
        "  </clipPath>\n",
        "</defs>\n",
-       "<g clip-path=\"url(#clip842)\">\n",
+       "<g clip-path=\"url(#clip962)\">\n",
        "<image width=\"2220\" height=\"1506\" xlink:href=\"data:image/png;base64,\n",
        "iVBORw0KGgoAAAANSUhEUgAACKwAAAXiCAYAAAA7mOImAAAgAElEQVR4nOzdeaCVdb0u8Gczqjhy\n",
        "ZEpNRfE2IIMoFGnmBAZqpuUxzTQ9drT0aHWrezt2cjh2urc0tJPXIUsyLTX16BEUZ7Npk0ggZkJO\n",
@@ -3350,23 +3372,23 @@
        "<?xml version=\"1.0\" encoding=\"utf-8\"?>\n",
        "<svg xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\" width=\"600\" height=\"400\" viewBox=\"0 0 2400 1600\">\n",
        "<defs>\n",
-       "  <clipPath id=\"clip870\">\n",
+       "  <clipPath id=\"clip990\">\n",
        "    <rect x=\"0\" y=\"0\" width=\"2400\" height=\"1600\"/>\n",
        "  </clipPath>\n",
        "</defs>\n",
-       "<path clip-path=\"url(#clip870)\" d=\"M0 1600 L2400 1600 L2400 8.88178e-14 L0 8.88178e-14  Z\" fill=\"#ffffff\" fill-rule=\"evenodd\" fill-opacity=\"1\"/>\n",
+       "<path clip-path=\"url(#clip990)\" d=\"M0 1600 L2400 1600 L2400 8.88178e-14 L0 8.88178e-14  Z\" fill=\"#ffffff\" fill-rule=\"evenodd\" fill-opacity=\"1\"/>\n",
        "<defs>\n",
-       "  <clipPath id=\"clip871\">\n",
+       "  <clipPath id=\"clip991\">\n",
        "    <rect x=\"480\" y=\"0\" width=\"1681\" height=\"1600\"/>\n",
        "  </clipPath>\n",
        "</defs>\n",
-       "<path clip-path=\"url(#clip870)\" d=\"M47.2441 1552.76 L2352.76 1552.76 L2352.76 47.2441 L47.2441 47.2441  Z\" fill=\"#ffffff\" fill-rule=\"evenodd\" fill-opacity=\"1\"/>\n",
+       "<path clip-path=\"url(#clip990)\" d=\"M47.2441 1552.76 L2352.76 1552.76 L2352.76 47.2441 L47.2441 47.2441  Z\" fill=\"#ffffff\" fill-rule=\"evenodd\" fill-opacity=\"1\"/>\n",
        "<defs>\n",
-       "  <clipPath id=\"clip872\">\n",
+       "  <clipPath id=\"clip992\">\n",
        "    <rect x=\"47\" y=\"47\" width=\"2307\" height=\"1507\"/>\n",
        "  </clipPath>\n",
        "</defs>\n",
-       "<g clip-path=\"url(#clip872)\">\n",
+       "<g clip-path=\"url(#clip992)\">\n",
        "<image width=\"2220\" height=\"1506\" xlink:href=\"data:image/png;base64,\n",
        "iVBORw0KGgoAAAANSUhEUgAACKwAAAXiCAYAAAA7mOImAAAgAElEQVR4nOzdeaCVdb0u8Gczqjhy\n",
        "ZEpNRfE2IIMoFGnmBAZqpuUxzTQ9drT0aHWrezt2cjh2urc0tJPXIUsyLTX16BEUZ7Npk0ggZkJO\n",
@@ -6560,7 +6582,7 @@
        "</svg>\n"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6731,7 +6753,7 @@
    "id": "59a6afa4",
    "metadata": {},
    "source": [
-    "After we have those data, we could then construct the model."
+    "After we have those data, we could then construct the model with numeric values in scripts."
    ]
   },
   {
@@ -6744,7 +6766,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "id": "8fad49cf",
    "metadata": {},
    "outputs": [
@@ -6755,23 +6777,23 @@
        "<?xml version=\"1.0\" encoding=\"utf-8\"?>\n",
        "<svg xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\" width=\"600\" height=\"400\" viewBox=\"0 0 2400 1600\">\n",
        "<defs>\n",
-       "  <clipPath id=\"clip900\">\n",
+       "  <clipPath id=\"clip020\">\n",
        "    <rect x=\"0\" y=\"0\" width=\"2400\" height=\"1600\"/>\n",
        "  </clipPath>\n",
        "</defs>\n",
-       "<path clip-path=\"url(#clip900)\" d=\"M0 1600 L2400 1600 L2400 8.88178e-14 L0 8.88178e-14  Z\" fill=\"#ffffff\" fill-rule=\"evenodd\" fill-opacity=\"1\"/>\n",
+       "<path clip-path=\"url(#clip020)\" d=\"M0 1600 L2400 1600 L2400 8.88178e-14 L0 8.88178e-14  Z\" fill=\"#ffffff\" fill-rule=\"evenodd\" fill-opacity=\"1\"/>\n",
        "<defs>\n",
-       "  <clipPath id=\"clip901\">\n",
+       "  <clipPath id=\"clip021\">\n",
        "    <rect x=\"480\" y=\"0\" width=\"1681\" height=\"1600\"/>\n",
        "  </clipPath>\n",
        "</defs>\n",
-       "<path clip-path=\"url(#clip900)\" d=\"M47.2441 1552.76 L2352.76 1552.76 L2352.76 47.2441 L47.2441 47.2441  Z\" fill=\"#ffffff\" fill-rule=\"evenodd\" fill-opacity=\"1\"/>\n",
+       "<path clip-path=\"url(#clip020)\" d=\"M47.2441 1552.76 L2352.76 1552.76 L2352.76 47.2441 L47.2441 47.2441  Z\" fill=\"#ffffff\" fill-rule=\"evenodd\" fill-opacity=\"1\"/>\n",
        "<defs>\n",
-       "  <clipPath id=\"clip902\">\n",
+       "  <clipPath id=\"clip022\">\n",
        "    <rect x=\"47\" y=\"47\" width=\"2307\" height=\"1507\"/>\n",
        "  </clipPath>\n",
        "</defs>\n",
-       "<g clip-path=\"url(#clip902)\">\n",
+       "<g clip-path=\"url(#clip022)\">\n",
        "<image width=\"2306\" height=\"1358\" xlink:href=\"data:image/png;base64,\n",
        "iVBORw0KGgoAAAANSUhEUgAACQIAAAVOCAYAAAAjWdYRAAAgAElEQVR4nOzdfXjT9b3/8VdbSrmx\n",
        "6x33TlrpjU4FCij81GvzgMJAOLjJ2YaoQ7xhbMpwQosKghQEtLoDMjduDhyQuQHHDUGQAm4wD9cY\n",
@@ -12711,23 +12733,23 @@
        "<?xml version=\"1.0\" encoding=\"utf-8\"?>\n",
        "<svg xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\" width=\"600\" height=\"400\" viewBox=\"0 0 2400 1600\">\n",
        "<defs>\n",
-       "  <clipPath id=\"clip930\">\n",
+       "  <clipPath id=\"clip050\">\n",
        "    <rect x=\"0\" y=\"0\" width=\"2400\" height=\"1600\"/>\n",
        "  </clipPath>\n",
        "</defs>\n",
-       "<path clip-path=\"url(#clip930)\" d=\"M0 1600 L2400 1600 L2400 8.88178e-14 L0 8.88178e-14  Z\" fill=\"#ffffff\" fill-rule=\"evenodd\" fill-opacity=\"1\"/>\n",
+       "<path clip-path=\"url(#clip050)\" d=\"M0 1600 L2400 1600 L2400 8.88178e-14 L0 8.88178e-14  Z\" fill=\"#ffffff\" fill-rule=\"evenodd\" fill-opacity=\"1\"/>\n",
        "<defs>\n",
-       "  <clipPath id=\"clip931\">\n",
+       "  <clipPath id=\"clip051\">\n",
        "    <rect x=\"480\" y=\"0\" width=\"1681\" height=\"1600\"/>\n",
        "  </clipPath>\n",
        "</defs>\n",
-       "<path clip-path=\"url(#clip930)\" d=\"M47.2441 1552.76 L2352.76 1552.76 L2352.76 47.2441 L47.2441 47.2441  Z\" fill=\"#ffffff\" fill-rule=\"evenodd\" fill-opacity=\"1\"/>\n",
+       "<path clip-path=\"url(#clip050)\" d=\"M47.2441 1552.76 L2352.76 1552.76 L2352.76 47.2441 L47.2441 47.2441  Z\" fill=\"#ffffff\" fill-rule=\"evenodd\" fill-opacity=\"1\"/>\n",
        "<defs>\n",
-       "  <clipPath id=\"clip932\">\n",
+       "  <clipPath id=\"clip052\">\n",
        "    <rect x=\"47\" y=\"47\" width=\"2307\" height=\"1507\"/>\n",
        "  </clipPath>\n",
        "</defs>\n",
-       "<g clip-path=\"url(#clip932)\">\n",
+       "<g clip-path=\"url(#clip052)\">\n",
        "<image width=\"2306\" height=\"1358\" xlink:href=\"data:image/png;base64,\n",
        "iVBORw0KGgoAAAANSUhEUgAACQIAAAVOCAYAAAAjWdYRAAAgAElEQVR4nOzdfXjT9b3/8VdbSrmx\n",
        "6x33TlrpjU4FCij81GvzgMJAOLjJ2YaoQ7xhbMpwQosKghQEtLoDMjduDhyQuQHHDUGQAm4wD9cY\n",
@@ -18664,7 +18686,7 @@
        "</svg>\n"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -18703,6 +18725,24 @@
     "Introducing a dummy extra source: Another possible approach for infeasibility is to add a dummy source with unlimited supply but a significantly higher cost, representing procurement from distant regions. Would this be a reasonable and standard way to handle infeasible demand?\n",
     "\n",
     "Considering local production as part of demand/supply: Should each state/location be treated as both a source and a sink, incorporating local production as a supply node? Would this abstraction improve the generality and flexibility of the model?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "35490370",
+   "metadata": {},
+   "source": [
+    "# Some discussion on the progress"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a68805ff",
+   "metadata": {},
+   "source": [
+    "We have collected the major relevant data from online and decided on some assumption or relaxation on the basis of those data. The subgroup information is accessible in the same report providing the total population data. So the next steps will mainly focus on complete the construction of upgraded model, and the solution of both models using Julia. Especially, we should elaborate more on the definition and analytic implementation of the subgroup-tradeoff condition.\n",
+    "\n",
+    "Depending on the current progress, we estimate that we could complete the work within about 20 work hours. If we further extend the problem with finer granularity, which introduces the consideration of accurate number of hired drivers and rented reefers, the time could be even longer. But our best prospect is to finalize a complete analysis based on LP-MCNF models."
    ]
   }
  ],
